--- a/views/Admin/partials/footer.ejs
+++ b/views/Admin/partials/footer.ejs
@@ -11,34 +11,35 @@
 <script src="/assets/Admin/js/moment.min.js"></script>
 <script src="/assets/Admin/js/daterangepicker.js"></script>
 <script src="/assets/Admin/js/jquery.validate.min.js"></script>
+<script src="/assets/Admin/js/jquery.fancybox.min.js"></script>
 <script src="/assets/Admin/js/projects.js"></script>
 <script>
+    $(document).ready(function() {
+        $('input[name="duration"]').daterangepicker(
+            {
+                locale: {
+                    format: 'YYYY/MM/DD'
+                },
+                startDate: moment(),
+                endDate: moment()
+            }
+        );
 
-    $('input[name="duration"]').daterangepicker(
-        {
-            locale: {
-                format: 'YYYY/MM/DD'
-            },
-            startDate: moment(),
-            endDate: moment()
-        }
-    );
 
-    $('#calendar').datepicker({});
+        !function ($) {
+            $(document).on("click", "ul.nav li.parent > a > span.icon", function () {
+                $(this).find('em:first').toggleClass("glyphicon-minus");
+            });
+            $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+        }(window.jQuery);
 
-    !function ($) {
-        $(document).on("click", "ul.nav li.parent > a > span.icon", function () {
-            $(this).find('em:first').toggleClass("glyphicon-minus");
-        });
-        $(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
-    }(window.jQuery);
-
-    $(window).on('resize', function () {
-        if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
-    })
-    $(window).on('resize', function () {
-        if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
-    })
+        $(window).on('resize', function () {
+            if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+        })
+        $(window).on('resize', function () {
+            if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+        })
+    });
 </script>
 </body>
 
