--- a/views/Admin/projects.ejs
+++ b/views/Admin/projects.ejs
@@ -48,11 +48,17 @@
                     <tr>
                         <td data-checkbox="true"><%=data[i]['_id']%></td>
                         <td><%=data[i]['Name']%></td>
-                        <td><%=data[i]['Duration']%></td>
+                        <td><%=data[i]['Duration'][0] + ' - ' + data[i]['Duration'][1]%></td>
                         <td><%=data[i]['Position']%></td>
                         <td><%=data[i]['Using']%></td>
                         <td><%=data[i]['Description']%></td>
-                        <td><%=data[i]['Images']%></td>
+                        <td>
+                            <div class="wrap_images">
+                                <% for( var j = 0; j < data[i]['Images'].length; j++ ) { %>
+                                    <a data-fancybox="gallery" href="/images/<%=data[i]['Images'][j]%>"><img src="/images/<%=data[i]['Images'][j]%>"></a>
+                                <% } %>
+                            </div>
+                        </td>
                         <td class="text-center"><input disabled type="checkbox" <%=data[i]['Show'] ? "checked=" : ""%> /></td>
                         <td>
                             <a href="#" class="edit" data-id="<%=data[i]['_id']%>">Edit</a>
@@ -93,7 +99,7 @@
 
                     <div class="form-group">
                         <label>Duration</label>
-                        <input type="text" name="duration" class="form-control" required>
+                        <input type="text" name="duration" class="form-control" value="" required>
                     </div>
 
                     <div class="form-group">
