--- a/views/Admin/index.ejs
+++ b/views/Admin/index.ejs
@@ -54,7 +54,7 @@
                     <svg class="glyph stroked app-window-with-content"><use xlink:href="#stroked-app-window-with-content"></use></svg>
                 </div>
                 <div class="col-sm-9 col-lg-7 widget-right">
-                    <div class="large">25.2k</div>
+                    <div class="large">0</div>
                     <div class="text-muted">Page Views</div>
                 </div>
             </div>
