Fix some error in css and header.ejs

--- a/public/Admin/css/styles.css
+++ b/public/Admin/css/styles.css
@@ -1015,6 +1015,7 @@ h1.page-header {
     flex-flow: row wrap;
     align-items: center;
     align-content: center;
+    height: 100%;
 }
 
 .wrap_images img {
