--- a/views/Admin/projects.ejs
+++ b/views/Admin/projects.ejs
@@ -116,7 +116,7 @@
                         <div id="imgView">
                         </div>
                         <label>Images</label>
-                        <input type="file" multiple name="images">
+                        <input type="file" multiple name="images" accept="image/*" />
                         <p class="help-block">Example block-level help text here.</p>
                     </div>
 
